pod.yml
#Yaml file to launch a single Pod
apiVersion: v1
kind: Pod
metadata:
  name: hello-pod
  labels:
     app: web

spec:
 containers:
  - name: web-container
    image: nigelpoulton/getting-started-k8s:1.0
    ports:
      - containerPort: 8080
        protocol: TCP
