nodeport.yml
#Nodeport as a servive yaml file
apiVersion: v1
kind: Service
metadata: 
 name: ps-nodeport
spec:
  type: NodePort
  ports: 
  - port: 80
    targetPort: 8080
    nodePort: 31112
    protocol: TCP
  selector:
    app: web
